--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Hello World</h1>
+    <!-- <div id="root"></div> -->
   </body>
 </html>
